--- a/src/main/resources/templates/lancamentos/visualizar.html
+++ b/src/main/resources/templates/lancamentos/visualizar.html
@@ -28,16 +28,56 @@
           >
             <thead>
               <tr>
-                <th scope="col">ID</th>
-                <th scope="col">Nome</th>
-                <th scope="col">Email</th>
-                <th scope="col">Endereço</th>
+                <th scope="col">Data</th>
+                <th scope="col">Descrição</th>
+                <th scope="col">Tipo Movimentação</th>
+                <th scope="col">Fundo</th>
                 <th scope="col">Ações</th>
               </tr>
             </thead>
           </table>
         </div>
       </div>
+
+      <script>
+        $(document).ready(function () {
+          $("#studentTable").DataTable({
+            processing: true,
+            serverSide: true,
+            responsive: true,
+            language: {
+              url: "https://cdn.datatables.net/plug-ins/1.13.5/i18n/pt-BR.json",
+            },
+            ajax: {
+              url: "/dataTable/lancamentos",
+              type: "GET",
+            },
+            columns: [
+              { data: "dataLancamento" },
+              { data: "descricao" },
+              { data: "tipoMovimentacao.descricao" },
+              { data: "fundoFinanceiro.descricao" },
+              {
+                data: null, // Define como null pois será preenchido manualmente
+                orderable: false, // Impede ordenação para esta coluna
+                render: function (data, type, row) {
+                  // Retorna o HTML para os botões de ação, com href dinâmico
+                  return `
+                            <a href="/lancamentos/consultar/${row.id}" title="Consultar" class="btn btn-warning">
+                                <i class="far fa-eye"></i>
+                            </a>
+                            <a href="/lancamentos/alterar/${row.id}" title="Alterar" class="btn btn-warning">
+                                <i class="far fa-edit"></i>
+                            </a>
+                            <a href="/lancamentos/excluir/${row.id}" title="Excluir" class="btn btn-danger">
+                                <i class="fas fa-trash-alt"></i>
+                            </a>`;
+                },
+              },
+            ],
+          });
+        });
+      </script>
     </div>
   </main>
 </html>
