--- a/src/main/resources/templates/lancamentos/incluir.html
+++ b/src/main/resources/templates/lancamentos/incluir.html
@@ -153,7 +153,13 @@
 
           <div class="row">
             <div class="col-md-4">
-              <button type="submit" class="btn btn-primary">Gravar</button>
+              <button
+                type="submit"
+                class="btn btn-primary"
+                th:if="${!somenteLeitura}"
+              >
+                Gravar
+              </button>
               <a
                 class="btn btn-secondary ml-3"
                 type="button"
