Muda cor botão consulta tabela

--- a/src/main/resources/templates/lancamentos/visualizar.html
+++ b/src/main/resources/templates/lancamentos/visualizar.html
@@ -63,7 +63,7 @@
                 render: function (data, type, row) {
                   // Retorna o HTML para os botões de ação, com href dinâmico
                   return `
-                            <a href="/lancamentos/consultar/${row.id}" title="Consultar" class="btn btn-warning">
+                            <a href="/lancamentos/consultar/${row.id}" title="Consultar" class="btn btn-success">
                                 <i class="far fa-eye"></i>
                             </a>
                             <a href="/lancamentos/alterar/${row.id}" title="Alterar" class="btn btn-warning">
