--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
-<html lang="pt" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html
+  lang="pt"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+>
+  <head th:replace="~{head :: head}"></head>
 
-<head th:replace="~{head :: head}"></head>
-
-<body id="page-top">
-
+  <body id="page-top">
     <div th:replace="~{menu :: menu}"></div>
 
-    <div th:if="${msg}" aria-live="polite" aria-atomic="true" style="position: fixed; min-height: 200px; z-index: 2;">
-        <!-- Contêiner do Toast -->
-        <div id="toastContainer" style="position: fixed; top: 30; right: 20;">
-            <!-- Toast -->
-            <div id="toast" th:class="${corMsg}" class="toast" role="alert" aria-live="assertive" aria-atomic="true"
-                data-delay="5000">
-                <div class="toast-header">
-                    <strong class="mr-auto">Mensagem</strong>
-                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="toast-body" th:text="${msg}" style="color: white;"></div>
-            </div>
+    <div
+      th:if="${msg}"
+      aria-live="polite"
+      aria-atomic="true"
+      style="position: fixed; min-height: 200px; z-index: 2"
+      class="rounded"
+    >
+      <!-- Contêiner do Toast -->
+      <div
+        id="toastContainer"
+        style="position: fixed; top: 30; right: 20"
+        class="rounded"
+      >
+        <!-- Toast -->
+        <div
+          id="toast"
+          th:class="${corMsg} ?: 'bg-gradient-info'"
+          class="toast rounded"
+          role="alert"
+          aria-live="assertive"
+          aria-atomic="true"
+          data-delay="10000"
+        >
+          <div class="toast-header">
+            <strong class="mr-auto">Mensagem</strong>
+            <button
+              type="button"
+              class="ml-2 mb-1 close"
+              data-dismiss="toast"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="toast-body" th:text="${msg}" style="color: white"></div>
         </div>
+      </div>
     </div>
 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top">
-        <i class="fas fa-angle-up"></i>
+      <i class="fas fa-angle-up"></i>
     </a>
 
     <!-- Bootstrap core JavaScript-->
@@ -40,7 +64,9 @@
 
     <!-- Page level plugins -->
     <script th:src="@{/vendor/datatables/jquery.dataTables.min.js}"></script>
-    <script th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"></script>
+    <script
+      th:src="@{/vendor/datatables/dataTables.bootstrap4.min.js}"
+    ></script>
 
     <!-- Page level custom scripts -->
     <!-- <script th:src="@{/js/demo/datatables-demo.js}"></script> -->
@@ -50,6 +76,5 @@
 
     <!-- jQuery Select2 -->
     <!-- <script th:src="@{/js/select2.full.min.js}"></script> -->
-</body>
-
+  </body>
 </html>
