Padroniza nome da tabela

--- a/src/main/resources/templates/lancamentos/visualizar.html
+++ b/src/main/resources/templates/lancamentos/visualizar.html
@@ -21,7 +21,7 @@
       <div class="card-body">
         <div class="table-responsive">
           <table
-            id="studentTable"
+            id="dataTable"
             class="table table-bordered"
             style="width: 100%"
             cellspacing="0"
@@ -41,7 +41,7 @@
 
       <script>
         $(document).ready(function () {
-          $("#studentTable").DataTable({
+          $("#dataTable").DataTable({
             processing: true,
             serverSide: true,
             responsive: true,
