--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -60,7 +60,7 @@
                 </div>
                 <div
                   class="h5 mb-0 font-weight-bold text-gray-800"
-                  th:text="${totalAno}"
+                  th:text="${#numbers.formatCurrency(totalAno)}"
                 ></div>
               </div>
               <div class="col-auto">
