--- a/src/main/resources/templates/lancamentos/visualizar.html
+++ b/src/main/resources/templates/lancamentos/visualizar.html
@@ -29,9 +29,11 @@
             <thead>
               <tr>
                 <th scope="col">Data</th>
+                <th scope="col">Valor</th>
                 <th scope="col">Descrição</th>
                 <th scope="col">Tipo Movimentação</th>
                 <th scope="col">Fundo</th>
+                <th scope="col">Responsável</th>
                 <th scope="col">Ações</th>
               </tr>
             </thead>
@@ -53,10 +55,12 @@
               type: "GET",
             },
             columns: [
-              { data: "dataLancamento" },
+              { data: "dataFormatada" },
+              { data: "valorMonetarioFormatado" },
               { data: "descricao" },
               { data: "tipoMovimentacao.descricao" },
               { data: "fundoFinanceiro.descricao" },
+              { data: "funcionarioLancamento.fullName" },
               {
                 data: null, // Define como null pois será preenchido manualmente
                 orderable: false, // Impede ordenação para esta coluna
