Correção de nomes de métodos

--- a/src/main/resources/templates/lancamentos/visualizar.html
+++ b/src/main/resources/templates/lancamentos/visualizar.html
@@ -55,7 +55,7 @@
               type: "GET",
             },
             columns: [
-              { data: "dataFormatada" },
+              { data: "dataLancamentoFormatada" },
               { data: "valorMonetarioFormatado" },
               { data: "descricao" },
               { data: "tipoMovimentacao.descricao" },
