--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -165,7 +165,7 @@
                 aria-expanded="false"
               >
                 <span
-                  th:text="${#authentication.principal.usuario.fullname}"
+                  th:text="${#authentication.principal.usuario.fullName}"
                   class="mr-2 d-none d-lg-inline text-gray-600 small"
                 ></span>
                 <img th:src="@{/img/logado.ico}" height="30" width="30" />
