--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -13,7 +13,7 @@
             <h3 class="font-weight-bold">
               Seja Bem-Vindo(a),
               <span
-                th:text="${#authentication.principal.usuario.fullname}"
+                th:text="${#authentication.principal.usuario.fullName}"
               ></span>
             </h3>
           </div>
