Inclui relatorio no menu

--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -102,6 +102,30 @@
         </div>
       </li>
 
+      <li class="nav-item">
+        <a
+          class="nav-link collapsed"
+          href="#"
+          data-toggle="collapse"
+          data-target="#collapseRelatorio"
+          aria-expanded="true"
+          aria-controls="collapseRelatorio"
+        >
+          <i class="fas fa-file"></i>
+          <span>Relatório</span>
+        </a>
+        <div
+          id="collapseRelatorio"
+          class="collapse"
+          aria-labelledby="headingTwo"
+          data-parent="#accordionSidebar"
+        >
+          <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" th:href="@{/relatorio}">Relatório</a>
+          </div>
+        </div>
+      </li>
+
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block" />
 
