Ajusta cores titulos

--- a/src/main/resources/templates/relatorio/visualizar.html
+++ b/src/main/resources/templates/relatorio/visualizar.html
@@ -8,7 +8,7 @@
   <main layout:fragment="content">
     <div class="card shadow mb-4">
       <div class="card-header py-3">
-        <h5 class="tituloIndex">Filtros Relatório</h5>
+        <h5 class="text-primary font-weight-bold">Filtros Relatório</h5>
       </div>
       <div class="card-body">
         <form
@@ -18,7 +18,7 @@
         >
           <div class="row d-flex align-items-center form-group ml-1">
             <div>
-              <p>Por Período</p>
+              <p>A partir de</p>
             </div>
             <div class="mb-3 col-md-2 form-group">
               <input
@@ -126,7 +126,7 @@
 
     <div class="card shadow mb-4">
       <div class="card-header py-3">
-        <h5 class="tituloIndex">Resultado Pesquisa</h5>
+        <h5 class="text-primary font-weight-bold">Resultado Pesquisa</h5>
       </div>
 
       <div class="card-body">
