--- a/src/main/resources/templates/usuarios/visualizar.html
+++ b/src/main/resources/templates/usuarios/visualizar.html
@@ -8,7 +8,7 @@
   <main layout:fragment="content">
     <div class="card shadow mb-4">
       <div class="card-header py-3">
-        <h5 class="tituloIndex">
+        <h5 class="text-primary font-weight-bold">
           Usuários Cadastrados
           <div style="float: right">
             <a th:href="@{/lancamentos/incluir}" class="btn btn-primary"
