Inclui placeholder para datas

--- a/src/main/resources/templates/lancamentos/incluir.html
+++ b/src/main/resources/templates/lancamentos/incluir.html
@@ -50,6 +50,7 @@
                 class="form-control datePicker"
                 data-mask="00/00/0000"
                 th:if="${!somenteLeitura}"
+                placeholder="dd/mm/aaaa"
               />
               <div
                 class="invalid-feedback"
