--- a/src/main/resources/templates/relatorio/visualizar.html
+++ b/src/main/resources/templates/relatorio/visualizar.html
@@ -28,6 +28,7 @@
                 class="form-control datePicker"
                 data-mask="00/00/0000"
                 th:field="*{dataInicio}"
+                placeholder="dd/mm/aaaa"
               />
             </div>
             <div>
@@ -41,6 +42,7 @@
                 class="form-control datePicker"
                 data-mask="00/00/0000"
                 th:field="*{dataFim}"
+                placeholder="dd/mm/aaaa"
               />
             </div>
           </div>
@@ -55,6 +57,7 @@
                 class="form-control datePicker"
                 data-mask="00/00/0000"
                 th:field="*{dataLancamento}"
+                placeholder="dd/mm/aaaa"
               />
             </div>
 
