--- a/src/main/resources/templates/relatorio/visualizar.html
+++ b/src/main/resources/templates/relatorio/visualizar.html
@@ -127,6 +127,29 @@
       </div>
     </div>
 
+    <div class="col-xl-4 col-md-6 mb-4">
+      <div class="card border-left-success shadow h-50 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div
+                class="text-xs font-weight-bold text-success text-uppercase mb-1"
+              >
+                Somatório Total filtro informado
+              </div>
+              <div
+                class="h5 mb-0 font-weight-bold text-gray-800"
+                th:text="${#numbers.formatCurrency(somatorioFiltroPesquisa)}"
+              ></div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-dollar-sign fa-2x text-gray-200"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="card shadow mb-4">
       <div class="card-header py-3">
         <h5 class="text-primary font-weight-bold">Resultado Pesquisa</h5>
