--- a/src/main/resources/templates/pages/home.html
+++ b/src/main/resources/templates/pages/home.html
@@ -71,5 +71,48 @@
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <!-- Fundos Financeiros -->
+      <div class="col-xl-12 col-lg-12">
+        <div class="card shadow mb-4">
+          <!-- Card Header - Dropdown -->
+          <div
+            class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
+          >
+            <h6 class="m-0 font-weight-bold text-primary">Totais Fundos</h6>
+          </div>
+          <!-- Card Body -->
+          <div class="card-body">
+            <div class="row">
+              <div
+                class="col-xl-3 col-md-6 mb-4"
+                th:each="fundo : ${listaFundos}"
+              >
+                <div class="card border-left-primary shadow h-100 py-2">
+                  <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                      <div class="col mr-2">
+                        <div
+                          class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+                          th:text="${fundo.nomeCarteira}"
+                        ></div>
+                        <div
+                          class="h5 mb-0 font-weight-bold text-gray-800"
+                          th:text="${fundo.totalCarteira}"
+                        ></div>
+                      </div>
+                      <div class="col-auto">
+                        <i class="fas fa-wallet fa-2x text-gray-300"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </main>
 </html>
